--- a/Processing/Processing.ipynb
+++ b/Processing/Processing.ipynb
@@ -2,33 +2,95 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
+   "source": [
+    "import pandas as pd\n",
+    "\n"
+   ],
+   "outputs": [],
    "metadata": {
     "collapsed": true
-   },
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "source": [
+    "df = pd.read_csv(\"crime_and_incarceration_by_state.csv\")\n",
+    "\n",
+    "df = df.drop(df.columns[[1, 2, 3, 4, 5, 6, 7]], axis = 1)\n"
+   ],
    "outputs": [],
-   "source": []
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "source": [
+    "df = df.melt(id_vars = [\"jurisdiction\"], \n",
+    "        var_name = \"Crime Type\", \n",
+    "        value_name = \"Value\")\n",
+    "\n",
+    "df = df.dropna()\n",
+    "\n"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "source": [
+    "df.dtypes"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "jurisdiction     object\n",
+       "Crime Type       object\n",
+       "Value           float64\n",
+       "dtype: object"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 89
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "source": [
+    "df.to_csv(\"division_of_crimes.csv\", index = False)"
+   ],
+   "outputs": [],
+   "metadata": {}
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
-   "language": "python",
-   "name": "python2"
+   "name": "python3",
+   "display_name": "Python 3.7.2 64-bit"
   },
   "language_info": {
+   "name": "python",
+   "version": "3.7.2",
+   "mimetype": "text/x-python",
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
+   "pygments_lexer": "ipython3",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "file_extension": ".py"
+  },
+  "interpreter": {
+   "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 2
 }
