--- a/Processing/Processing.ipynb
+++ b/Processing/Processing.ipynb
@@ -14,59 +14,533 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 195,
    "source": [
     "df = pd.read_csv(\"crime_and_incarceration_by_state.csv\")\n",
-    "\n",
-    "df = df.drop(df.columns[[1, 2, 3, 4, 5, 6, 7]], axis = 1)\n"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 88,
-   "source": [
-    "df = df.melt(id_vars = [\"jurisdiction\"], \n",
-    "        var_name = \"Crime Type\", \n",
-    "        value_name = \"Value\")\n",
-    "\n",
-    "df = df.dropna()\n",
-    "\n"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 89,
-   "source": [
-    "df.dtypes"
+    "df = df.drop(df.columns[[1, 2, 3, 4, 5, 6, 7]], axis = 1)\n",
+    "df = df.dropna()"
    ],
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>jurisdiction</th>\n",
+       "      <th>murder_manslaughter</th>\n",
+       "      <th>rape_legacy</th>\n",
+       "      <th>rape_revised</th>\n",
+       "      <th>robbery</th>\n",
+       "      <th>agg_assault</th>\n",
+       "      <th>property_crime_total</th>\n",
+       "      <th>burglary</th>\n",
+       "      <th>larceny</th>\n",
+       "      <th>vehicle_theft</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>613</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>346.0</td>\n",
+       "      <td>1449.0</td>\n",
+       "      <td>2055.0</td>\n",
+       "      <td>4645.0</td>\n",
+       "      <td>13788.0</td>\n",
+       "      <td>161835.0</td>\n",
+       "      <td>42410.0</td>\n",
+       "      <td>108862.0</td>\n",
+       "      <td>10563.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>614</th>\n",
+       "      <td>Alaska</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>657.0</td>\n",
+       "      <td>925.0</td>\n",
+       "      <td>623.0</td>\n",
+       "      <td>3127.0</td>\n",
+       "      <td>21211.0</td>\n",
+       "      <td>2917.0</td>\n",
+       "      <td>16599.0</td>\n",
+       "      <td>1695.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>615</th>\n",
+       "      <td>Arizona</td>\n",
+       "      <td>355.0</td>\n",
+       "      <td>2344.0</td>\n",
+       "      <td>3174.0</td>\n",
+       "      <td>6656.0</td>\n",
+       "      <td>17391.0</td>\n",
+       "      <td>223294.0</td>\n",
+       "      <td>48292.0</td>\n",
+       "      <td>158036.0</td>\n",
+       "      <td>16966.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>616</th>\n",
+       "      <td>Arkansas</td>\n",
+       "      <td>158.0</td>\n",
+       "      <td>1135.0</td>\n",
+       "      <td>1490.0</td>\n",
+       "      <td>2261.0</td>\n",
+       "      <td>9796.0</td>\n",
+       "      <td>106477.0</td>\n",
+       "      <td>30369.0</td>\n",
+       "      <td>70430.0</td>\n",
+       "      <td>5678.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>617</th>\n",
+       "      <td>California</td>\n",
+       "      <td>1746.0</td>\n",
+       "      <td>7464.0</td>\n",
+       "      <td>10324.0</td>\n",
+       "      <td>53640.0</td>\n",
+       "      <td>89029.0</td>\n",
+       "      <td>1018907.0</td>\n",
+       "      <td>232058.0</td>\n",
+       "      <td>621557.0</td>\n",
+       "      <td>165292.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>760</th>\n",
+       "      <td>Virginia</td>\n",
+       "      <td>383.0</td>\n",
+       "      <td>1493.0</td>\n",
+       "      <td>2340.0</td>\n",
+       "      <td>4441.0</td>\n",
+       "      <td>9235.0</td>\n",
+       "      <td>156470.0</td>\n",
+       "      <td>21340.0</td>\n",
+       "      <td>127019.0</td>\n",
+       "      <td>8111.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>761</th>\n",
+       "      <td>Washington</td>\n",
+       "      <td>211.0</td>\n",
+       "      <td>2193.0</td>\n",
+       "      <td>2705.0</td>\n",
+       "      <td>5449.0</td>\n",
+       "      <td>12029.0</td>\n",
+       "      <td>248369.0</td>\n",
+       "      <td>50993.0</td>\n",
+       "      <td>170509.0</td>\n",
+       "      <td>26867.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>762</th>\n",
+       "      <td>West Virginia</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>420.0</td>\n",
+       "      <td>672.0</td>\n",
+       "      <td>760.0</td>\n",
+       "      <td>4729.0</td>\n",
+       "      <td>37251.0</td>\n",
+       "      <td>9170.0</td>\n",
+       "      <td>25842.0</td>\n",
+       "      <td>2239.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>763</th>\n",
+       "      <td>Wisconsin</td>\n",
+       "      <td>240.0</td>\n",
+       "      <td>1224.0</td>\n",
+       "      <td>1780.0</td>\n",
+       "      <td>5232.0</td>\n",
+       "      <td>10395.0</td>\n",
+       "      <td>113924.0</td>\n",
+       "      <td>19554.0</td>\n",
+       "      <td>83385.0</td>\n",
+       "      <td>10985.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>764</th>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>125.0</td>\n",
+       "      <td>173.0</td>\n",
+       "      <td>59.0</td>\n",
+       "      <td>1054.0</td>\n",
+       "      <td>11151.0</td>\n",
+       "      <td>1762.0</td>\n",
+       "      <td>8797.0</td>\n",
+       "      <td>592.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>149 rows × 10 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "jurisdiction     object\n",
-       "Crime Type       object\n",
-       "Value           float64\n",
-       "dtype: object"
+       "      jurisdiction  murder_manslaughter  rape_legacy  rape_revised  robbery  \\\n",
+       "613        Alabama                346.0       1449.0        2055.0   4645.0   \n",
+       "614         Alaska                 34.0        657.0         925.0    623.0   \n",
+       "615        Arizona                355.0       2344.0        3174.0   6656.0   \n",
+       "616       Arkansas                158.0       1135.0        1490.0   2261.0   \n",
+       "617     California               1746.0       7464.0       10324.0  53640.0   \n",
+       "..             ...                  ...          ...           ...      ...   \n",
+       "760       Virginia                383.0       1493.0        2340.0   4441.0   \n",
+       "761     Washington                211.0       2193.0        2705.0   5449.0   \n",
+       "762  West Virginia                 70.0        420.0         672.0    760.0   \n",
+       "763      Wisconsin                240.0       1224.0        1780.0   5232.0   \n",
+       "764        Wyoming                 16.0        125.0         173.0     59.0   \n",
+       "\n",
+       "     agg_assault  property_crime_total  burglary   larceny  vehicle_theft  \n",
+       "613      13788.0              161835.0   42410.0  108862.0        10563.0  \n",
+       "614       3127.0               21211.0    2917.0   16599.0         1695.0  \n",
+       "615      17391.0              223294.0   48292.0  158036.0        16966.0  \n",
+       "616       9796.0              106477.0   30369.0   70430.0         5678.0  \n",
+       "617      89029.0             1018907.0  232058.0  621557.0       165292.0  \n",
+       "..           ...                   ...       ...       ...            ...  \n",
+       "760       9235.0              156470.0   21340.0  127019.0         8111.0  \n",
+       "761      12029.0              248369.0   50993.0  170509.0        26867.0  \n",
+       "762       4729.0               37251.0    9170.0   25842.0         2239.0  \n",
+       "763      10395.0              113924.0   19554.0   83385.0        10985.0  \n",
+       "764       1054.0               11151.0    1762.0    8797.0          592.0  \n",
+       "\n",
+       "[149 rows x 10 columns]"
       ]
      },
      "metadata": {},
-     "execution_count": 89
+     "execution_count": 195
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 196,
+   "source": [
+    "df = df.melt(id_vars = [\"jurisdiction\"], \n",
+    "        var_name = \"Crime Type\", \n",
+    "        value_name = \"Value\")\n",
+    "\n",
+    "df = df.groupby(by = [\"jurisdiction\", \"Crime Type\"]).sum().reset_index()"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 198,
+   "source": [
+    "df"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>jurisdiction</th>\n",
+       "      <th>Crime Type</th>\n",
+       "      <th>Value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>agg_assault</td>\n",
+       "      <td>43487.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>burglary</td>\n",
+       "      <td>117380.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>larceny</td>\n",
+       "      <td>312256.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>murder_manslaughter</td>\n",
+       "      <td>970.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>property_crime_total</td>\n",
+       "      <td>460675.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>445</th>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>property_crime_total</td>\n",
+       "      <td>35437.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>446</th>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>rape_legacy</td>\n",
+       "      <td>395.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>447</th>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>rape_revised</td>\n",
+       "      <td>551.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>448</th>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>robbery</td>\n",
+       "      <td>186.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>449</th>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>vehicle_theft</td>\n",
+       "      <td>1773.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>450 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    jurisdiction            Crime Type     Value\n",
+       "0        Alabama           agg_assault   43487.0\n",
+       "1        Alabama              burglary  117380.0\n",
+       "2        Alabama               larceny  312256.0\n",
+       "3        Alabama   murder_manslaughter     970.0\n",
+       "4        Alabama  property_crime_total  460675.0\n",
+       "..           ...                   ...       ...\n",
+       "445      Wyoming  property_crime_total   35437.0\n",
+       "446      Wyoming           rape_legacy     395.0\n",
+       "447      Wyoming          rape_revised     551.0\n",
+       "448      Wyoming               robbery     186.0\n",
+       "449      Wyoming         vehicle_theft    1773.0\n",
+       "\n",
+       "[450 rows x 3 columns]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 198
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 199,
    "source": [
     "df.to_csv(\"division_of_crimes.csv\", index = False)"
    ],
    "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Crime Vs Population Graph"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 206,
+   "source": [
+    "df = pd.read_csv(\"crime_and_incarceration_by_state.csv\")\n",
+    "df = df[df[\"year\"] == 2016]\n",
+    "df = df[[\"jurisdiction\", \"state_population\", \"violent_crime_total\"]]\n",
+    "df = df.dropna()"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 208,
+   "source": [
+    "df = df.melt(id_vars = [\"jurisdiction\"], \n",
+    "        var_name = \"Value Type\", \n",
+    "        value_name = \"Value\")\n",
+    "\n",
+    "df"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>jurisdiction</th>\n",
+       "      <th>Value Type</th>\n",
+       "      <th>Value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>state_population</td>\n",
+       "      <td>4860545.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Alaska</td>\n",
+       "      <td>state_population</td>\n",
+       "      <td>741522.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Arizona</td>\n",
+       "      <td>state_population</td>\n",
+       "      <td>6908642.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Arkansas</td>\n",
+       "      <td>state_population</td>\n",
+       "      <td>2988231.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>California</td>\n",
+       "      <td>state_population</td>\n",
+       "      <td>39296476.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>Virginia</td>\n",
+       "      <td>violent_crime_total</td>\n",
+       "      <td>18495.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>Washington</td>\n",
+       "      <td>violent_crime_total</td>\n",
+       "      <td>22101.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>West Virginia</td>\n",
+       "      <td>violent_crime_total</td>\n",
+       "      <td>6633.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>Wisconsin</td>\n",
+       "      <td>violent_crime_total</td>\n",
+       "      <td>17716.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>violent_crime_total</td>\n",
+       "      <td>1431.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>100 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     jurisdiction           Value Type       Value\n",
+       "0         Alabama     state_population   4860545.0\n",
+       "1          Alaska     state_population    741522.0\n",
+       "2         Arizona     state_population   6908642.0\n",
+       "3        Arkansas     state_population   2988231.0\n",
+       "4      California     state_population  39296476.0\n",
+       "..            ...                  ...         ...\n",
+       "95       Virginia  violent_crime_total     18495.0\n",
+       "96     Washington  violent_crime_total     22101.0\n",
+       "97  West Virginia  violent_crime_total      6633.0\n",
+       "98      Wisconsin  violent_crime_total     17716.0\n",
+       "99        Wyoming  violent_crime_total      1431.0\n",
+       "\n",
+       "[100 rows x 3 columns]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 208
+    }
+   ],
    "metadata": {}
   }
  ],
