Added data for crime and prisoners

--- a/Processing/Processing.ipynb
+++ b/Processing/Processing.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 229,
    "source": [
     "df = pd.read_csv(\"crime_and_incarceration_by_state.csv\")\n",
     "df = df[df[\"year\"] == 2016]\n",
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 230,
    "source": [
     "df = df.melt(id_vars = [\"jurisdiction\"], \n",
     "        var_name = \"Crime Type\", \n",
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 227,
    "source": [
     "df.to_csv(\"division_of_crimes.csv\", index = False)"
    ],
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 228,
    "source": [
     "df = pd.read_csv(\"crime_and_incarceration_by_state.csv\")\n",
     "df = df[df[\"year\"] == 2016]\n",
@@ -578,9 +578,35 @@
    "source": [
     "df = df.melt(id_vars = [\"jurisdiction\"], \n",
     "        var_name = \"Crime Type\", \n",
-    "        value_name = \"Value\")\n",
-    "\n",
-    "df"
+    "        value_name = \"Value\")\n"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Scatter Plot"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 231,
+   "source": [
+    "df = pd.read_csv(\"crime_and_incarceration_by_state.csv\")\n",
+    "df = df[df[\"year\"] == 2016]\n",
+    "df = df[[\"jurisdiction\", \"prisoner_count\", \"violent_crime_total\"]]\n",
+    "df = df.dropna()"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "df.to_csv(\"crime_and_prisoners.csv\", index = False)"
    ],
    "outputs": [],
    "metadata": {}
