--- a/Processing/Processing.ipynb
+++ b/Processing/Processing.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "source": [
     "df = pd.read_csv(\"crime_and_incarceration_by_state.csv\")\n",
     "df = df[df[\"year\"] == 2016]\n",
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "source": [
     "df[\"conviction_rate_10000\"] = (df.prisoner_count/df.state_population) * 10000"
    ],
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "source": [
     "df.to_csv(\"conviction_rate_per10000.csv\", index = False)"
    ],
@@ -709,10 +709,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 12,
    "source": [
     "df = pd.read_csv(\"crime_and_incarceration_by_state.csv\")\n",
-    "df = df.drop(df.columns[[1, 2, 3, 4, 5, 6, 7]], axis = 1)\n",
+    "df = df.drop(df.columns[[1, 2, 3, 4, 5, 6, 7, 13, 14, 15, 16]], axis = 1)\n",
     "df = df.dropna()\n",
     "\n",
     "df"
@@ -746,10 +746,6 @@
        "      <th>rape_revised</th>\n",
        "      <th>robbery</th>\n",
        "      <th>agg_assault</th>\n",
-       "      <th>property_crime_total</th>\n",
-       "      <th>burglary</th>\n",
-       "      <th>larceny</th>\n",
-       "      <th>vehicle_theft</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -761,10 +757,6 @@
        "      <td>2055.0</td>\n",
        "      <td>4645.0</td>\n",
        "      <td>13788.0</td>\n",
-       "      <td>161835.0</td>\n",
-       "      <td>42410.0</td>\n",
-       "      <td>108862.0</td>\n",
-       "      <td>10563.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>614</th>\n",
@@ -774,10 +766,6 @@
        "      <td>925.0</td>\n",
        "      <td>623.0</td>\n",
        "      <td>3127.0</td>\n",
-       "      <td>21211.0</td>\n",
-       "      <td>2917.0</td>\n",
-       "      <td>16599.0</td>\n",
-       "      <td>1695.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>615</th>\n",
@@ -787,10 +775,6 @@
        "      <td>3174.0</td>\n",
        "      <td>6656.0</td>\n",
        "      <td>17391.0</td>\n",
-       "      <td>223294.0</td>\n",
-       "      <td>48292.0</td>\n",
-       "      <td>158036.0</td>\n",
-       "      <td>16966.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>616</th>\n",
@@ -800,10 +784,6 @@
        "      <td>1490.0</td>\n",
        "      <td>2261.0</td>\n",
        "      <td>9796.0</td>\n",
-       "      <td>106477.0</td>\n",
-       "      <td>30369.0</td>\n",
-       "      <td>70430.0</td>\n",
-       "      <td>5678.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>617</th>\n",
@@ -813,17 +793,9 @@
        "      <td>10324.0</td>\n",
        "      <td>53640.0</td>\n",
        "      <td>89029.0</td>\n",
-       "      <td>1018907.0</td>\n",
-       "      <td>232058.0</td>\n",
-       "      <td>621557.0</td>\n",
-       "      <td>165292.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -839,10 +811,6 @@
        "      <td>2340.0</td>\n",
        "      <td>4441.0</td>\n",
        "      <td>9235.0</td>\n",
-       "      <td>156470.0</td>\n",
-       "      <td>21340.0</td>\n",
-       "      <td>127019.0</td>\n",
-       "      <td>8111.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>761</th>\n",
@@ -852,10 +820,6 @@
        "      <td>2705.0</td>\n",
        "      <td>5449.0</td>\n",
        "      <td>12029.0</td>\n",
-       "      <td>248369.0</td>\n",
-       "      <td>50993.0</td>\n",
-       "      <td>170509.0</td>\n",
-       "      <td>26867.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>762</th>\n",
@@ -865,10 +829,6 @@
        "      <td>672.0</td>\n",
        "      <td>760.0</td>\n",
        "      <td>4729.0</td>\n",
-       "      <td>37251.0</td>\n",
-       "      <td>9170.0</td>\n",
-       "      <td>25842.0</td>\n",
-       "      <td>2239.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>763</th>\n",
@@ -878,10 +838,6 @@
        "      <td>1780.0</td>\n",
        "      <td>5232.0</td>\n",
        "      <td>10395.0</td>\n",
-       "      <td>113924.0</td>\n",
-       "      <td>19554.0</td>\n",
-       "      <td>83385.0</td>\n",
-       "      <td>10985.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>764</th>\n",
@@ -891,14 +847,10 @@
        "      <td>173.0</td>\n",
        "      <td>59.0</td>\n",
        "      <td>1054.0</td>\n",
-       "      <td>11151.0</td>\n",
-       "      <td>1762.0</td>\n",
-       "      <td>8797.0</td>\n",
-       "      <td>592.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>149 rows × 10 columns</p>\n",
+       "<p>149 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -915,35 +867,44 @@
        "763      Wisconsin                240.0       1224.0        1780.0   5232.0   \n",
        "764        Wyoming                 16.0        125.0         173.0     59.0   \n",
        "\n",
-       "     agg_assault  property_crime_total  burglary   larceny  vehicle_theft  \n",
-       "613      13788.0              161835.0   42410.0  108862.0        10563.0  \n",
-       "614       3127.0               21211.0    2917.0   16599.0         1695.0  \n",
-       "615      17391.0              223294.0   48292.0  158036.0        16966.0  \n",
-       "616       9796.0              106477.0   30369.0   70430.0         5678.0  \n",
-       "617      89029.0             1018907.0  232058.0  621557.0       165292.0  \n",
-       "..           ...                   ...       ...       ...            ...  \n",
-       "760       9235.0              156470.0   21340.0  127019.0         8111.0  \n",
-       "761      12029.0              248369.0   50993.0  170509.0        26867.0  \n",
-       "762       4729.0               37251.0    9170.0   25842.0         2239.0  \n",
-       "763      10395.0              113924.0   19554.0   83385.0        10985.0  \n",
-       "764       1054.0               11151.0    1762.0    8797.0          592.0  \n",
+       "     agg_assault  \n",
+       "613      13788.0  \n",
+       "614       3127.0  \n",
+       "615      17391.0  \n",
+       "616       9796.0  \n",
+       "617      89029.0  \n",
+       "..           ...  \n",
+       "760       9235.0  \n",
+       "761      12029.0  \n",
+       "762       4729.0  \n",
+       "763      10395.0  \n",
+       "764       1054.0  \n",
        "\n",
-       "[149 rows x 10 columns]"
+       "[149 rows x 6 columns]"
       ]
      },
      "metadata": {},
-     "execution_count": 210
+     "execution_count": 12
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "source": [
     "df = df.melt(id_vars = [\"jurisdiction\"], \n",
     "        var_name = \"Crime Type\", \n",
     "        value_name = \"Value\")\n"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "source": [
+    "df.to_csv(\"division_of_crimes.csv\", index = False)"
    ],
    "outputs": [],
    "metadata": {}
