normalised heatmap data

--- a/Processing/Processing.ipynb
+++ b/Processing/Processing.ipynb
@@ -709,10 +709,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
+   "source": [
+    "def normalise(data):\n",
+    "    data[2] = (data[2]/data[1])*10000\n",
+    "    data[3] = (data[3]/data[1])*10000\n",
+    "    data[4] = (data[4]/data[1])*10000\n",
+    "    data[5] = (data[5]/data[1])*10000\n",
+    "    data[6] = (data[6]/data[1])*10000\n",
+    "\n",
+    "    return data"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "source": [
     "df = pd.read_csv(\"crime_and_incarceration_by_state.csv\")\n",
-    "df = df.drop(df.columns[[1, 2, 3, 4, 5, 6, 7, 13, 14, 15, 16]], axis = 1)\n",
+    "df = df.drop(df.columns[[1, 2, 4, 5, 6, 7, 13, 14, 15, 16]], axis = 1)\n",
     "df = df.dropna()\n",
     "\n",
     "df"
@@ -741,6 +757,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>jurisdiction</th>\n",
+       "      <th>prisoner_count</th>\n",
        "      <th>murder_manslaughter</th>\n",
        "      <th>rape_legacy</th>\n",
        "      <th>rape_revised</th>\n",
@@ -752,6 +769,7 @@
        "    <tr>\n",
        "      <th>613</th>\n",
        "      <td>Alabama</td>\n",
+       "      <td>26825</td>\n",
        "      <td>346.0</td>\n",
        "      <td>1449.0</td>\n",
        "      <td>2055.0</td>\n",
@@ -761,6 +779,7 @@
        "    <tr>\n",
        "      <th>614</th>\n",
        "      <td>Alaska</td>\n",
+       "      <td>5081</td>\n",
        "      <td>34.0</td>\n",
        "      <td>657.0</td>\n",
        "      <td>925.0</td>\n",
@@ -770,6 +789,7 @@
        "    <tr>\n",
        "      <th>615</th>\n",
        "      <td>Arizona</td>\n",
+       "      <td>41031</td>\n",
        "      <td>355.0</td>\n",
        "      <td>2344.0</td>\n",
        "      <td>3174.0</td>\n",
@@ -779,6 +799,7 @@
        "    <tr>\n",
        "      <th>616</th>\n",
        "      <td>Arkansas</td>\n",
+       "      <td>14295</td>\n",
        "      <td>158.0</td>\n",
        "      <td>1135.0</td>\n",
        "      <td>1490.0</td>\n",
@@ -788,6 +809,7 @@
        "    <tr>\n",
        "      <th>617</th>\n",
        "      <td>California</td>\n",
+       "      <td>134339</td>\n",
        "      <td>1746.0</td>\n",
        "      <td>7464.0</td>\n",
        "      <td>10324.0</td>\n",
@@ -802,10 +824,12 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>760</th>\n",
        "      <td>Virginia</td>\n",
+       "      <td>30430</td>\n",
        "      <td>383.0</td>\n",
        "      <td>1493.0</td>\n",
        "      <td>2340.0</td>\n",
@@ -815,6 +839,7 @@
        "    <tr>\n",
        "      <th>761</th>\n",
        "      <td>Washington</td>\n",
+       "      <td>17222</td>\n",
        "      <td>211.0</td>\n",
        "      <td>2193.0</td>\n",
        "      <td>2705.0</td>\n",
@@ -824,6 +849,7 @@
        "    <tr>\n",
        "      <th>762</th>\n",
        "      <td>West Virginia</td>\n",
+       "      <td>5925</td>\n",
        "      <td>70.0</td>\n",
        "      <td>420.0</td>\n",
        "      <td>672.0</td>\n",
@@ -833,6 +859,7 @@
        "    <tr>\n",
        "      <th>763</th>\n",
        "      <td>Wisconsin</td>\n",
+       "      <td>22914</td>\n",
        "      <td>240.0</td>\n",
        "      <td>1224.0</td>\n",
        "      <td>1780.0</td>\n",
@@ -842,6 +869,7 @@
        "    <tr>\n",
        "      <th>764</th>\n",
        "      <td>Wyoming</td>\n",
+       "      <td>2400</td>\n",
        "      <td>16.0</td>\n",
        "      <td>125.0</td>\n",
        "      <td>173.0</td>\n",
@@ -850,43 +878,61 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>149 rows × 6 columns</p>\n",
+       "<p>149 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      jurisdiction  murder_manslaughter  rape_legacy  rape_revised  robbery  \\\n",
-       "613        Alabama                346.0       1449.0        2055.0   4645.0   \n",
-       "614         Alaska                 34.0        657.0         925.0    623.0   \n",
-       "615        Arizona                355.0       2344.0        3174.0   6656.0   \n",
-       "616       Arkansas                158.0       1135.0        1490.0   2261.0   \n",
-       "617     California               1746.0       7464.0       10324.0  53640.0   \n",
-       "..             ...                  ...          ...           ...      ...   \n",
-       "760       Virginia                383.0       1493.0        2340.0   4441.0   \n",
-       "761     Washington                211.0       2193.0        2705.0   5449.0   \n",
-       "762  West Virginia                 70.0        420.0         672.0    760.0   \n",
-       "763      Wisconsin                240.0       1224.0        1780.0   5232.0   \n",
-       "764        Wyoming                 16.0        125.0         173.0     59.0   \n",
+       "      jurisdiction  prisoner_count  murder_manslaughter  rape_legacy  \\\n",
+       "613        Alabama           26825                346.0       1449.0   \n",
+       "614         Alaska            5081                 34.0        657.0   \n",
+       "615        Arizona           41031                355.0       2344.0   \n",
+       "616       Arkansas           14295                158.0       1135.0   \n",
+       "617     California          134339               1746.0       7464.0   \n",
+       "..             ...             ...                  ...          ...   \n",
+       "760       Virginia           30430                383.0       1493.0   \n",
+       "761     Washington           17222                211.0       2193.0   \n",
+       "762  West Virginia            5925                 70.0        420.0   \n",
+       "763      Wisconsin           22914                240.0       1224.0   \n",
+       "764        Wyoming            2400                 16.0        125.0   \n",
        "\n",
-       "     agg_assault  \n",
-       "613      13788.0  \n",
-       "614       3127.0  \n",
-       "615      17391.0  \n",
-       "616       9796.0  \n",
-       "617      89029.0  \n",
-       "..           ...  \n",
-       "760       9235.0  \n",
-       "761      12029.0  \n",
-       "762       4729.0  \n",
-       "763      10395.0  \n",
-       "764       1054.0  \n",
+       "     rape_revised  robbery  agg_assault  \n",
+       "613        2055.0   4645.0      13788.0  \n",
+       "614         925.0    623.0       3127.0  \n",
+       "615        3174.0   6656.0      17391.0  \n",
+       "616        1490.0   2261.0       9796.0  \n",
+       "617       10324.0  53640.0      89029.0  \n",
+       "..            ...      ...          ...  \n",
+       "760        2340.0   4441.0       9235.0  \n",
+       "761        2705.0   5449.0      12029.0  \n",
+       "762         672.0    760.0       4729.0  \n",
+       "763        1780.0   5232.0      10395.0  \n",
+       "764         173.0     59.0       1054.0  \n",
        "\n",
-       "[149 rows x 6 columns]"
+       "[149 rows x 7 columns]"
       ]
      },
      "metadata": {},
-     "execution_count": 12
+     "execution_count": 27
     }
    ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "source": [
+    "df = df.apply(normalise, axis = 1)\n"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "source": [
+    "df = df.drop(df.columns[[1]], axis = 1)\n"
+   ],
+   "outputs": [],
    "metadata": {}
   },
   {
