--- a/Processing/Processing.ipynb
+++ b/Processing/Processing.ipynb
@@ -1328,7 +1328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 77,
    "source": [
     "def normalise(data):\n",
     "    data[2] = (data[2]/data[1])*10000\n",
@@ -1343,7 +1343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 78,
    "source": [
     "df = pd.read_csv(\"crime_and_incarceration_by_state.csv\")\n",
     "df = df[df[\"year\"] == 2016]\n",
@@ -1945,14 +1945,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 71
+     "execution_count": 78
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 79,
    "source": [
     "df = df.apply(normalise, axis = 1)\n"
    ],
@@ -1961,7 +1961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 80,
    "source": [
     "df = df.drop(df.columns[[1]], axis = 1)\n"
    ],
@@ -1970,7 +1970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 81,
    "source": [
     "df = df.melt(id_vars = [\"jurisdiction\"], \n",
     "        var_name = \"Crime Type\", \n",
@@ -1981,7 +1981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 82,
    "source": [
     "df"
    ],
@@ -2103,14 +2103,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 75
+     "execution_count": 82
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 76,
    "source": [
     "df.to_csv(\"division_of_crimes.csv\", index = False)"
    ],
@@ -2126,7 +2126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 93,
    "source": [
     "df = pd.read_csv(\"crime_and_incarceration_by_state.csv\")\n",
     "df = df[df[\"year\"] == 2016]\n",
@@ -2134,6 +2134,128 @@
     "df = df.dropna()"
    ],
    "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "source": [
+    "df = df.sort_values(by = ['violent_crime_total'], ascending = False)\n",
+    "df = df.head(10)\n",
+    "\n",
+    "df\n"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>jurisdiction</th>\n",
+       "      <th>prisoner_count</th>\n",
+       "      <th>violent_crime_total</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>770</th>\n",
+       "      <td>California</td>\n",
+       "      <td>129416</td>\n",
+       "      <td>174796.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>808</th>\n",
+       "      <td>Texas</td>\n",
+       "      <td>151276</td>\n",
+       "      <td>121064.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>774</th>\n",
+       "      <td>Florida</td>\n",
+       "      <td>98010</td>\n",
+       "      <td>88700.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>797</th>\n",
+       "      <td>New York</td>\n",
+       "      <td>50611</td>\n",
+       "      <td>74315.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>778</th>\n",
+       "      <td>Illinois</td>\n",
+       "      <td>43616</td>\n",
+       "      <td>56054.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>787</th>\n",
+       "      <td>Michigan</td>\n",
+       "      <td>41122</td>\n",
+       "      <td>45782.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>807</th>\n",
+       "      <td>Tennessee</td>\n",
+       "      <td>21539</td>\n",
+       "      <td>42459.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>803</th>\n",
+       "      <td>Pennsylvania</td>\n",
+       "      <td>48287</td>\n",
+       "      <td>40389.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>775</th>\n",
+       "      <td>Georgia</td>\n",
+       "      <td>53433</td>\n",
+       "      <td>40268.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>798</th>\n",
+       "      <td>North Carolina</td>\n",
+       "      <td>35970</td>\n",
+       "      <td>37767.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       jurisdiction  prisoner_count  violent_crime_total\n",
+       "770      California          129416             174796.0\n",
+       "808           Texas          151276             121064.0\n",
+       "774         Florida           98010              88700.0\n",
+       "797        New York           50611              74315.0\n",
+       "778        Illinois           43616              56054.0\n",
+       "787        Michigan           41122              45782.0\n",
+       "807       Tennessee           21539              42459.0\n",
+       "803    Pennsylvania           48287              40389.0\n",
+       "775         Georgia           53433              40268.0\n",
+       "798  North Carolina           35970              37767.0"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 95
+    }
+   ],
    "metadata": {}
   },
   {
