renamed columns for crimes and prisoners data

--- a/Processing/Processing.ipynb
+++ b/Processing/Processing.ipynb
@@ -2721,7 +2721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 134,
    "source": [
     "df.to_csv(\"division_of_crimes.csv\", index = False)"
    ],
@@ -2737,7 +2737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 137,
    "source": [
     "df = pd.read_csv(\"crime_and_incarceration_by_state.csv\")\n",
     "df = df[df[\"year\"] == 2016]\n",
@@ -2749,10 +2749,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 138,
    "source": [
     "df = df.sort_values(by = ['violent_crime_total'], ascending = False)\n",
     "df = df.head(10)\n",
+    "\n",
+    "df = df.rename(columns={\"jurisdiction\":\"State\", \"prisoner_count\": \"Prisoners\", \"violent_crime_total\": \"Violent Crime Total\"})\n",
     "\n",
     "df\n"
    ],
@@ -2779,9 +2781,9 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>jurisdiction</th>\n",
-       "      <th>prisoner_count</th>\n",
-       "      <th>violent_crime_total</th>\n",
+       "      <th>State</th>\n",
+       "      <th>Prisoners</th>\n",
+       "      <th>Violent Crime Total</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -2850,21 +2852,21 @@
        "</div>"
       ],
       "text/plain": [
-       "       jurisdiction  prisoner_count  violent_crime_total\n",
-       "770      California          129416             174796.0\n",
-       "808           Texas          151276             121064.0\n",
-       "774         Florida           98010              88700.0\n",
-       "797        New York           50611              74315.0\n",
-       "778        Illinois           43616              56054.0\n",
-       "787        Michigan           41122              45782.0\n",
-       "807       Tennessee           21539              42459.0\n",
-       "803    Pennsylvania           48287              40389.0\n",
-       "775         Georgia           53433              40268.0\n",
-       "798  North Carolina           35970              37767.0"
+       "              State  Prisoners  Violent Crime Total\n",
+       "770      California     129416             174796.0\n",
+       "808           Texas     151276             121064.0\n",
+       "774         Florida      98010              88700.0\n",
+       "797        New York      50611              74315.0\n",
+       "778        Illinois      43616              56054.0\n",
+       "787        Michigan      41122              45782.0\n",
+       "807       Tennessee      21539              42459.0\n",
+       "803    Pennsylvania      48287              40389.0\n",
+       "775         Georgia      53433              40268.0\n",
+       "798  North Carolina      35970              37767.0"
       ]
      },
      "metadata": {},
-     "execution_count": 95
+     "execution_count": 138
     }
    ],
    "metadata": {}
