changed conviction to crimes

--- a/Processing/Processing.ipynb
+++ b/Processing/Processing.ipynb
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 145,
    "source": [
     "def normalise(data):\n",
     "    data[2] = (data[2]/data[1])*10000\n",
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 146,
    "source": [
     "df = pd.read_csv(\"crime_and_incarceration_by_state.csv\")\n",
     "df = df[df[\"year\"] == 2016]\n",
@@ -917,17 +917,17 @@
       ]
      },
      "metadata": {},
-     "execution_count": 141
+     "execution_count": 146
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 147,
    "source": [
     "df = df.apply(normalise, axis = 1)\n",
-    "df = df.rename(columns={\"jurisdiction\":\"State\", \"state_population\": \"Population\", \"violent_crime_total\": \"Convictions per 10,000 People\"})\n",
+    "df = df.rename(columns={\"jurisdiction\":\"State\", \"state_population\": \"Population\", \"violent_crime_total\": \"Violent crimes per 10,000 People\"})\n",
     "df"
    ],
    "outputs": [
@@ -955,7 +955,7 @@
        "      <th></th>\n",
        "      <th>State</th>\n",
        "      <th>Population</th>\n",
-       "      <th>Convictions per 10,000 People</th>\n",
+       "      <th>Violent crimes per 10,000 People</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1264,70 +1264,70 @@
        "</div>"
       ],
       "text/plain": [
-       "              State  Population  Convictions per 10,000 People\n",
-       "766         Alabama   4860545.0                      53.240943\n",
-       "767          Alaska    741522.0                      80.456143\n",
-       "768         Arizona   6908642.0                      47.103324\n",
-       "769        Arkansas   2988231.0                      55.427442\n",
-       "770      California  39296476.0                      44.481342\n",
-       "771        Colorado   5530105.0                      34.411643\n",
-       "772     Connecticut   3587685.0                      22.769558\n",
-       "773        Delaware    952698.0                      51.002521\n",
-       "774         Florida  20656589.0                      42.940294\n",
-       "775         Georgia  10313620.0                      39.043517\n",
-       "776          Hawaii   1428683.0                      24.162113\n",
-       "777           Idaho   1680026.0                      23.071072\n",
-       "778        Illinois  12835726.0                      43.670300\n",
-       "779         Indiana   6634007.0                      39.969810\n",
-       "780            Iowa   3130869.0                      29.288993\n",
-       "781          Kansas   2907731.0                      40.117191\n",
-       "782        Kentucky   4436113.0                      23.561167\n",
-       "783       Louisiana   4686157.0                      56.500454\n",
-       "784           Maine   1330232.0                      12.396334\n",
-       "785        Maryland   6024752.0                      48.166298\n",
-       "786   Massachusetts   6823721.0                      38.065742\n",
-       "787        Michigan   9933445.0                      46.088744\n",
-       "788       Minnesota   5525050.0                      24.189826\n",
-       "789     Mississippi   2985415.0                      28.173638\n",
-       "790        Missouri   6091176.0                      52.075330\n",
-       "791         Montana   1038656.0                      37.413735\n",
-       "792        Nebraska   1907603.0                      29.675986\n",
-       "793          Nevada   2939254.0                      67.785908\n",
-       "794   New Hampshire   1335015.0                      19.984794\n",
-       "795      New Jersey   8978416.0                      24.348393\n",
-       "796      New Mexico   2085432.0                      69.937548\n",
-       "797        New York  19836286.0                      37.464170\n",
-       "798  North Carolina  10156689.0                      37.184362\n",
-       "799    North Dakota    755548.0                      25.213487\n",
-       "800            Ohio  11622554.0                      30.766904\n",
-       "801        Oklahoma   3921207.0                      45.534449\n",
-       "802          Oregon   4085989.0                      26.879661\n",
-       "803    Pennsylvania  12787085.0                      31.585776\n",
-       "804    Rhode Island   1057566.0                      23.913401\n",
-       "805  South Carolina   4959822.0                      50.681254\n",
-       "806    South Dakota    861542.0                      42.203398\n",
-       "807       Tennessee   6649404.0                      63.853843\n",
-       "808           Texas  27904862.0                      43.384554\n",
-       "809            Utah   3044321.0                      24.327264\n",
-       "810         Vermont    623354.0                      13.651954\n",
-       "811        Virginia   8414380.0                      21.980229\n",
-       "812      Washington   7280934.0                      30.354622\n",
-       "813   West Virginia   1828637.0                      36.272918\n",
-       "814       Wisconsin   5772917.0                      30.688125\n",
-       "815         Wyoming    584910.0                      24.465302"
+       "              State  Population  Violent crimes per 10,000 People\n",
+       "766         Alabama   4860545.0                         53.240943\n",
+       "767          Alaska    741522.0                         80.456143\n",
+       "768         Arizona   6908642.0                         47.103324\n",
+       "769        Arkansas   2988231.0                         55.427442\n",
+       "770      California  39296476.0                         44.481342\n",
+       "771        Colorado   5530105.0                         34.411643\n",
+       "772     Connecticut   3587685.0                         22.769558\n",
+       "773        Delaware    952698.0                         51.002521\n",
+       "774         Florida  20656589.0                         42.940294\n",
+       "775         Georgia  10313620.0                         39.043517\n",
+       "776          Hawaii   1428683.0                         24.162113\n",
+       "777           Idaho   1680026.0                         23.071072\n",
+       "778        Illinois  12835726.0                         43.670300\n",
+       "779         Indiana   6634007.0                         39.969810\n",
+       "780            Iowa   3130869.0                         29.288993\n",
+       "781          Kansas   2907731.0                         40.117191\n",
+       "782        Kentucky   4436113.0                         23.561167\n",
+       "783       Louisiana   4686157.0                         56.500454\n",
+       "784           Maine   1330232.0                         12.396334\n",
+       "785        Maryland   6024752.0                         48.166298\n",
+       "786   Massachusetts   6823721.0                         38.065742\n",
+       "787        Michigan   9933445.0                         46.088744\n",
+       "788       Minnesota   5525050.0                         24.189826\n",
+       "789     Mississippi   2985415.0                         28.173638\n",
+       "790        Missouri   6091176.0                         52.075330\n",
+       "791         Montana   1038656.0                         37.413735\n",
+       "792        Nebraska   1907603.0                         29.675986\n",
+       "793          Nevada   2939254.0                         67.785908\n",
+       "794   New Hampshire   1335015.0                         19.984794\n",
+       "795      New Jersey   8978416.0                         24.348393\n",
+       "796      New Mexico   2085432.0                         69.937548\n",
+       "797        New York  19836286.0                         37.464170\n",
+       "798  North Carolina  10156689.0                         37.184362\n",
+       "799    North Dakota    755548.0                         25.213487\n",
+       "800            Ohio  11622554.0                         30.766904\n",
+       "801        Oklahoma   3921207.0                         45.534449\n",
+       "802          Oregon   4085989.0                         26.879661\n",
+       "803    Pennsylvania  12787085.0                         31.585776\n",
+       "804    Rhode Island   1057566.0                         23.913401\n",
+       "805  South Carolina   4959822.0                         50.681254\n",
+       "806    South Dakota    861542.0                         42.203398\n",
+       "807       Tennessee   6649404.0                         63.853843\n",
+       "808           Texas  27904862.0                         43.384554\n",
+       "809            Utah   3044321.0                         24.327264\n",
+       "810         Vermont    623354.0                         13.651954\n",
+       "811        Virginia   8414380.0                         21.980229\n",
+       "812      Washington   7280934.0                         30.354622\n",
+       "813   West Virginia   1828637.0                         36.272918\n",
+       "814       Wisconsin   5772917.0                         30.688125\n",
+       "815         Wyoming    584910.0                         24.465302"
       ]
      },
      "metadata": {},
-     "execution_count": 142
+     "execution_count": 147
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 148,
    "source": [
-    "df.to_csv(\"conviction_rate.csv\", index = False)"
+    "df.to_csv(\"crime_rate.csv\", index = False)"
    ],
    "outputs": [],
    "metadata": {}
